--- a/carrito.html
+++ b/carrito.html
@@ -31,27 +31,19 @@
             </div>
             <div class="iconosheadercontainer">
                 <a href="carrito.html">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart iconheader"></i>
                 </a>
                 <a href="index.html">
-                    <i class="fas fa-sign-out-alt"></i>
+                    <i class="fas fa-sign-out-alt iconheader"></i>
                 </a>
             </div>
         </div>
     </header>
-
     <main>
-    	<div class="title">Carrito</div>
-    	<div class="maincont">
-    		<div class="layoutcarrito">
-    			<div class="items"><img class="imgitem" src=""><p class="texto">Nombre</p></div>
-    			<div class="items"><img class="imgitem" src=""><p>Nombre</p></div>
-    			<div class="items"><img class="imgitem" src=""><p>Nombre</p></div>
-    			<dir class="totalcarrito">Total 123</dir>
-    		</div>
-    		<button class="btncarrito">Comprar</button>
+    	<div id="#CartContainer" class="maincont">
     	</div>
     </main>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
