--- a/productos.html
+++ b/productos.html
@@ -31,7 +31,10 @@
             </div>
             <div class="iconosheadercontainer">
                 <a href="carrito.html">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart iconheader"></i>
+                </a>
+                <a href="index.html">
+                    <i class="fas fa-sign-out-alt iconheader"></i>
                 </a>
             </div>
         </div>
